# hdsc

./: .gitignore  LICENSE  README.md  etl.ipynb  pyproject.toml
assets/: hdsc.xcf
data/mat/: README.txt
nbsrc/: eda.ipynb  epm.ipynb  etl.ipynb  fee.ipynb  kbe.ipynb  mpt.ipynb  ptt.ipynb
src/: kbe.py
