[project]
name = "hdsc"
version = "0.1.0"
description = "HDSC: classifying pulmonary fibrosis extensions harnessing lung ultrasound spectroscopy and HDC/VSA analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "scipy>=1.13.1",
    "torch>=2.8.0",
    "torch-hd>=5.8.4",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
    "xarray>=2024.7.0",
    "xrft>=1.0.1",
]
